# toy-heaan-ckks

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  notes.org  toy.py
.github/workflows/: additional-checks.yml  code-quality.yml  platform-coverage.yml  publish.yml  test.yml
benches/: basic.rs  end_to_end.rs  primes.rs
data/: golden_context_light.json  golden_context_small.json  golden_encode_light.json
examples/: ckks_abs.rs  ckks_bigint.rs  ckks_full.rs  ckks_mem.rs  ckks_naive.rs  ckks_naive_encoder.rs  ckks_naive_mul.rs  ckks_ntt.rs  ckks_rns.rs  ckks_sum.rs  ct_mul_demo.rs  debug_rescale.rs  demo_sum.rs  encode_debug._rs  encode_debug.rs  encode_decode.rs  encrypt_add.rs  encrypt_mul.rs  full_cycle.rs  horner_chain.rs  keys.rs  mem.rs  mul_try.rs  naive_ct_mul.rs  naive_mod_switch.rs  ntt.rs  rns._rs  rns_mod_switch._rs  rns_mod_switch.rs  rotation_demo.rs  rotation_stress.rs  std_dev_8.rs
scripts/: reference_ckks_encode.py
specs/: ckks_add_mul_audit.md  ctx.md  current_task.md  overview.md  parameters.md  refactoring.md  textbook_encode_decode.md
src/: ciphertext.rs  ckks.rs  encoding.rs  encryption.rs  fixed.rs  keys.rs  lib.rs  math.rs  old_code.rs  plaintext.rs  ring_utils.rs  rings.rs  table.rs
src/crypto/: builder.rs  engine.rs  errors.rs  mod.rs  operations.rs  types.rs
src/encoding/: bigint.rs  ckks_encoder.rs  fft.rs  mod.rs  naive.rs  special_fft.rs  textbook.rs
src/keys/: common.rs  mod.rs  public_key.rs  relin_key.rs  rotation_key.rs  secret_key.rs
src/math/: mod.rs  primes.rs  sampling.rs  utils.rs
src/rings/: README.md  arithmetic.rs  basis.rs  display.rs  math.rs  mod.rs  ntt.rs  poly_ring.rs  traits.rs
src/rings/backends/: bigint.rs  mod.rs  naive.rs  ntt.rs  rns.rs
src/rings/backends/bigint/: bigint.rs  display.rs  mod.rs  poly.rs
src/rings/backends/naive/: mod.rs  poly.rs
src/rings/backends/ntt/: mod.rs  ntt.rs  poly.rs
src/rings/backends/rns/: mod.rs  ntt_poly.rs  params.rs  poly.rs
src/rings/backends/rns_ntt/: basis.rs  errors.rs  mod.rs  poly.rs
src/rns/: arithmetic.rs  basis.rs  element.rs  mod.rs
tests/: basic_ckks.rs  encoder_bigint.rs  integration_mul.rs  plaintext_mul.rs  ring_properties.proptest-regressions  ring_properties.rs  textbook_encoding.rs
